--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^7.8.2",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "typed.js": "^2.1.0",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
